plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'codeministry'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'com.opencsv:opencsv:5.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'

    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.4'
}

test {
    useJUnitPlatform()

    failFast = true
    testLogging.showCauses(true)
    testLogging.showExceptions(true)
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

compileJava {
    options.compilerArgs = [
            '-Amapstruct.unmappedTargetPolicy=ERROR'
    ]
}

jar {
    archiveFileName = "toggl-to-jira.jar"
}
